# rollball-ai

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PHASE1-README.md  README.md  README.zh.md  agent-as-apk-design-doc.md  agent-as-app-design-doc.md  cargo-check-output.txt  clippy.toml  clippy_output.txt  clippy_output2.txt  clippy_output3.txt  clippy_output4.txt  clippy_output5.txt  clippy_output6.txt  overview.md  research_report_rollball_design_refinements.md  rustfmt.toml  test_output.txt
apps/rollball-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/rollball-desktop/src-tauri/capabilities/: default.json
apps/rollball-desktop/src-tauri/src/: gateway_client.rs  lib.rs  main.rs  state.rs
core/: Cargo.toml
core/acowork-core/: Cargo.toml  build.rs
core/acowork-core/proto/: gateway_ipc.proto
core/acowork-core/src/: crlf.rs  defaults.rs  error.rs  intent.rs  lib.rs  logging.rs  manifest.rs  permission.rs  proto_bridge.rs  protocol.rs
core/acowork-core/src/memory/: traits.rs
core/acowork-core/src/providers/: aliases.rs  mock.rs  mod.rs  traits.rs
core/acowork-core/src/tools/: mod.rs  schema.rs  traits.rs
core/acowork-embed/: Cargo.toml  build.rs
core/acowork-embed/assets/: embedding_models.json
core/acowork-embed/src/: config.rs  download.rs  event_bus.rs  lib.rs  main.rs  registry.rs  server.rs  shutdown.rs
core/acowork-gateway/: Cargo.toml
core/acowork-gateway/src/: config.rs  error.rs  lib.rs  main.rs  resource_cache.rs
core/acowork-gateway/src/budget/: mod.rs  store.rs  tracker.rs
core/acowork-gateway/src/capability/: mod.rs  registry.rs
core/acowork-gateway/src/cron/: mod.rs  store.rs
core/acowork-gateway/src/gateway/: mod.rs  state.rs
core/acowork-gateway/src/grpc/: dispatch.rs  mod.rs  server.rs
core/acowork-gateway/src/http/: agent_config.rs  agents.rs  approval.rs  auth.rs  (+18 more)
core/acowork-grafeo/: Cargo.toml
core/acowork-grafeo/src/: backup.rs  conflict.rs  engineering.rs  error.rs  eval.rs  export.rs  grafeo.rs  graph.rs  index_config.rs  judge.rs  lib.rs  retrieval.rs  retrieval_metrics.rs  spreading.rs  types.rs
core/acowork-mcp/: Cargo.toml
core/acowork-mcp/src/: client.rs  config.rs  lib.rs  protocol.rs  transport.rs  wrapper.rs
core/acowork-memory/: Cargo.toml
core/acowork-memory/src/: lib.rs  store.rs  types.rs
core/acowork-runtime/: Cargo.toml
core/acowork-runtime/src/: agent_config.rs  cli.rs  episode_distill.rs  error.rs  lib.rs  main.rs  mcp_notify.rs  prompt.rs
core/acowork-sign/: Cargo.toml
core/acowork-sign/src/: certificate.rs  error.rs  keygen.rs  lib.rs  packager.rs  sign.rs  signing_block.rs  verify.rs  zip_utils.rs
core/acowork-tool-sdk/: Cargo.toml
core/acowork-tool-sdk/examples/: image_filter.rs
core/acowork-tool-sdk/src/: exports.rs  lib.rs  tool.rs
core/acowork-vault/: Cargo.toml
core/acowork-vault/src/: encryption.rs  error.rs  lib.rs  vault.rs
core/rollball-core/: Cargo.toml  build.rs
core/rollball-core/proto/: gateway_ipc.proto
core/rollball-core/src/: budget.rs  identity.rs  lib.rs  logging.rs  manifest.rs  packaging.rs  permission.rs  proto_bridge.rs  protocol.rs
core/rollball-core/tests/: manifest_parse.rs
core/rollball-embed/: Cargo.toml  build.rs
core/rollball-embed/src/: config.rs  download.rs  lib.rs  main.rs  model.rs  pool.rs  registry.rs  server.rs  shutdown.rs
core/rollball-gateway/: Cargo.toml
core/rollball-gateway/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  permission_store.rs  resource_cache.rs
core/rollball-gateway/tests/: cron_integration.rs  gateway_e2e.rs  gateway_lifecycle.rs  gateway_package.rs  http_api.rs  permission_e2e.rs  permission_ipc.rs  s1_desktop_e2e.rs  s4_publish_e2e.rs  s5_bench.rs  s5_e2e.rs  search_provider_tests.rs  session_api_test.rs
core/rollball-grafeo/: Cargo.toml
core/rollball-grafeo/src/: abstention.rs  backup.rs  conflict.rs  decay.rs  engineering.rs  error.rs  eval.rs  export.rs  grafeo.rs  index_config.rs  lib.rs  retrieval.rs  retrieval_metrics.rs  spreading.rs  stats.rs  types.rs
core/rollball-grafeo/tests/: concurrent_safety.rs  consolidation_effectiveness.rs  consolidation_integration.rs
core/rollball-mcp/src/: client.rs  config.rs  lib.rs  protocol.rs  transport.rs  wrapper.rs
core/rollball-memory/src/: lib.rs  types.rs
core/rollball-runtime/: Cargo.toml
core/rollball-runtime/src/: agent_config.rs  cli.rs  config.rs  conversation.rs  episode_distill.rs  error.rs  lib.rs  main.rs  platform.rs
core/rollball-runtime/tests/: conversation_integration_test.rs  conversation_test.rs  e2e_session_test.rs  e2e_weather_agent.rs  gateway_routing_test.rs  grpc_ipc_integration_test.rs  history_recovery_e2e.rs  llm_integration.rs  p3_security_integration.rs  rag_integration.rs  runtime_main_loop.rs  s56_multi_agent_collab.rs  s5_integration.rs  search_backend_integration.rs  select_borrow_check_test.rs  session_actor_test.rs  shell_security_integration.rs  skill_injection_test.rs  tool_call_e2e.rs  tool_call_stress.rs
core/rollball-sign/: Cargo.toml
core/rollball-sign/src/: error.rs  keygen.rs  lib.rs  packager.rs  sign.rs  signing_block.rs
core/rollball-sign/tests/: sign_roundtrip.rs
core/rollball-vault/: Cargo.toml
core/rollball-vault/src/: encryption.rs  key_derivation.rs  lib.rs  vault.rs
crates/rollball-core/: Cargo.toml
crates/rollball-core/src/: error.rs  identity.rs  lib.rs  manifest.rs  permission.rs  protocol.rs
crates/rollball-core/tests/: manifest_parse.rs
crates/rollball-gateway/: Cargo.toml
crates/rollball-gateway/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
crates/rollball-gateway/tests/: gateway_lifecycle.rs  gateway_package.rs
crates/rollball-grafeo/: Cargo.toml
crates/rollball-grafeo/src/: decay.rs  grafeo.rs  graph.rs  lib.rs  retrieval.rs
crates/rollball-memory/: Cargo.toml
crates/rollball-memory/src/: store.rs  types.rs
crates/rollball-runtime/: Cargo.toml
crates/rollball-runtime/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
crates/rollball-runtime/tests/: e2e_weather_agent.rs  runtime_main_loop.rs
(+791 files in other folders)
