[workspace]
members = [
    "rollball-core",
    "rollball-memory",
    "rollball-runtime",
    "rollball-gateway",
    "rollball-grafeo",
    "rollball-vault",
    "rollball-sign",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.95"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter"] }

# Async trait
async-trait = "0.1"

# Cryptography
chacha20poly1305 = "0.10"
rand = "0.10"

# Configuration
toml = "1.0"
directories = "6.0"

# Date/time
chrono = { version = "0.4", features = ["clock", "std", "serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Database
rusqlite = { version = "0.37", features = ["bundled"] }
grafeo-engine = { version = "0.5.39", features = [
    "lpg",
    "gql",
    "vector-index",
    "text-index",
    "hybrid-search",
    "wal",
    "grafeo-file",
    "algos",
    "cdc",
    "parallel",
] }
grafeo-common = "0.5.40"
grafeo-core = "0.5.40"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# ZIP
zip = { version = "8.1", default-features = true, features = ["deflate-flate2"] }

# Concurrency primitives
parking_lot = "0.12"

# UUID
uuid = { version = "1.22", features = ["v4", "std"] }

# Stream
futures-core = "0.3"

# Regex
regex = "1.0"

# Signing
ed25519-dalek = { version = "2.1", features = ["std"] }
x509-cert = "0.2"
sha2 = "0.10"

# Secret protection
secrecy = "0.10"

# Testing
tempfile = "3.0"

# Internal crate references
rollball-core = { path = "rollball-core" }
rollball-memory = { path = "rollball-memory" }
rollball-grafeo = { path = "rollball-grafeo" }
rollball-vault = { path = "rollball-vault" }
rollball-sign = { path = "rollball-sign" }
