[workspace]
members = [
    "rollball-core",
    "rollball-mcp",
    "rollball-memory",
    "rollball-runtime",
    "rollball-gateway",
    "rollball-grafeo",
    "rollball-vault",
    "rollball-sign",
    "rollball-tool-sdk",
    "rollball-embed",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.95"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde", "derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter"] }
tracing-appender = "0.2"

# Async trait
async-trait = "0.1"

# Cryptography
chacha20poly1305 = "0.10"
rand = "0.10"

# Configuration
toml = "1.0"
directories = "6.0"

# Date/time
chrono = { version = "0.4", features = ["clock", "std", "serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Database
rusqlite = { version = "0.37", features = ["bundled"] }
grafeo-engine = { version = "0.5.39", default-features = false, features = [
    "lpg",
    "gql",
    "vector-index",
    "text-index",
    "hybrid-search",
    "wal",
    "grafeo-file",
    "algos",
    "cdc",
    "parallel",
    "regex",
] }
grafeo-common = "0.5.40"
grafeo-core = "0.5.40"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Token counting
tiktoken-rs = "0.6"

# ZIP
zip = { version = "8.1", default-features = true, features = ["deflate-flate2"] }

# Document parsing
pdf-extract = "0.10"
calamine = "0.26"
quick-xml = "0.37"
lopdf = "0.38"

# Concurrency primitives
parking_lot = "0.12"

# UUID
uuid = { version = "1.22", features = ["v4", "std"] }
futures-util = "0.3"

# Stream
futures-core = "0.3"
tokio-stream = "0.1"
tokio-tungstenite = "0.26"

# Regex
regex = "1.0"

# Signing
ed25519-dalek = { version = "2.1", features = ["std"] }
x509-cert = "0.2"
sha2 = "0.10"
serde_yaml = "0.9"

# Secret protection
secrecy = "0.10"

# Testing
tempfile = "3.0"
mockito = "1"

# System
libc = "0.2"

# File watching
notify = "8"

# ripgrep-based file traversal (gitignore-aware)
ignore = "0.4"
globset = "0.4"

# Interactive CLI
dialoguer = "0.11"

# WASM runtime
wasmtime = "29"
wasmtime-wasi = "29"

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
protoc-bin-vendored = "3"

# ONNX Runtime — static or dynamic linking.
#
# The `download-binaries` feature downloads and statically links prebuilt ORT.
#   Windows: Requires MSVC v144+ (14.40+).
#   Linux:   Requires glibc 2.38+ (Ubuntu 23.10+, Fedora 39+).
#   macOS:   Requires macOS 12+ (Monterey).
#
# For older Linux (e.g. Ubuntu 22.04, glibc < 2.38), disable `download-binaries`
# and install ONNX Runtime manually:
#   export ORT_LIB_LOCATION=/path/to/onnxruntime/lib
#   export ORT_DYLIB_PATH=/path/to/onnxruntime/lib/libonnxruntime.so
#   cargo build --release -p rollball-embed
#
# GPU acceleration (opt-in per platform):
#   --features directml (Windows) | cuda (Linux) | coreml (macOS)
ort = { version = "2.0.0-rc.10" }

# Tokenizer (HuggingFace)
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

# Signal handling (graceful shutdown)
signal-hook = "0.3"

# Numerical arrays (for ONNX tensor construction)
ndarray = "0.17"

# Internal crate references
rollball-core = { path = "rollball-core" }
rollball-mcp = { path = "rollball-mcp" }
rollball-memory = { path = "rollball-memory" }
rollball-grafeo = { path = "rollball-grafeo" }
rollball-runtime = { path = "rollball-runtime" }
rollball-gateway = { path = "rollball-gateway" }
rollball-vault = { path = "rollball-vault" }
rollball-sign = { path = "rollball-sign" }
rollball-embed = { path = "rollball-embed" }
