[package]
name = "acowork-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Gateway - Agent lifecycle manager and IPC coordinator"

[features]
default = []
# Interactive CLI approval (dialoguer-based confirmation prompts)
interactive-cli = ["dialoguer"]

[[bin]]
name = "acowork-gateway"
path = "src/main.rs"

[dependencies]
acowork-core.workspace = true
acowork-sign.workspace = true
acowork-vault.workspace = true
acowork-memory.workspace = true
secrecy.workspace = true
tokio.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tracing-appender.workspace = true
chrono.workspace = true
anyhow.workspace = true
zip.workspace = true
parking_lot.workspace = true
toml.workspace = true
# SQLite for one-time data migration (permissions.db + cron_entries.db → .json).
# TODO: remove after all users have migrated (gateway v0.3+).
rusqlite.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
futures-util.workspace = true
rand.workspace = true
fs2 = "0.4"
libc.workspace = true
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
tonic.workspace = true
prost.workspace = true
tokio-stream.workspace = true
ignore.workspace = true
regex.workspace = true

# Interactive CLI (feature-gated)
dialoguer = { workspace = true, optional = true }

[dev-dependencies]
acowork-sign = { workspace = true }
acowork-memory = { workspace = true }
acowork-grafeo = { workspace = true }
grafeo-common = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true, features = ["tokio-io"] }
