[package]
name = "acowork-grafeo"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Grafeo graph database engine (Phase 2 implementation)"

[dependencies]
acowork-core.workspace = true
acowork-memory.workspace = true

# Grafeo dependencies:
# - grafeo-engine: Main database engine (public API)
# - grafeo-common: Common types (NodeId, Value, etc.)
# - grafeo-core: Graph primitives (Direction, Node, Edge) - version-locked
grafeo-engine.workspace = true
grafeo-common.workspace = true
grafeo-core.workspace = true  # Used for Direction and graph primitives
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
