[package]
name = "acowork-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
acowork-core = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "io-util", "sync", "process", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Non-workspace
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tempfile = { workspace = true }
