[package]
name = "acowork-tool-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

description = "SDK for building AgentCowork WASM tools — provides ToolInput/ToolOutput types and #[tool] macro"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
