[package]
name = "rollball-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Gateway - Agent lifecycle manager and IPC coordinator"

[features]
default = []
# Interactive CLI approval (dialoguer-based confirmation prompts)
interactive-cli = ["dialoguer"]

[[bin]]
name = "rollball-gateway"
path = "src/main.rs"

[dependencies]
rollball-core.workspace = true
rollball-sign.workspace = true
rollball-vault.workspace = true
rollball-memory.workspace = true
secrecy.workspace = true
tokio.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tracing-appender.workspace = true
chrono.workspace = true
anyhow.workspace = true
zip.workspace = true
parking_lot.workspace = true
directories.workspace = true
toml.workspace = true
rusqlite.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
futures-util.workspace = true
rand.workspace = true
fs2 = "0.4"
libc.workspace = true
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
tonic.workspace = true
prost.workspace = true
tokio-stream.workspace = true

# Interactive CLI (feature-gated)
dialoguer = { workspace = true, optional = true }

[dev-dependencies]
rollball-sign = { workspace = true }
rollball-memory = { workspace = true }
rollball-grafeo = { workspace = true }
grafeo-common = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true, features = ["tokio-io"] }
