[package]
name = "rollball-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Agent Runtime - unified execution engine for .agent packages"

[[bin]]
name = "rollball-runtime"
path = "src/main.rs"

[features]
default = []
# Local embedding generation via ONNX Runtime + all-MiniLM-L6-v2
local-embeddings = []
# WASM tool sandbox (Wasmtime-based)
wasm-tools = ["wasmtime", "wasmtime-wasi"]

[dependencies]
rollball-core.workspace = true
rollball-memory.workspace = true
rollball-grafeo.workspace = true
grafeo-common.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
directories.workspace = true
parking_lot.workspace = true
regex.workspace = true
rusqlite.workspace = true
futures = "0.3"
futures-core.workspace = true
futures-util = "0.3"
rand.workspace = true
sha2.workspace = true
zip.workspace = true
toml.workspace = true
serde_yaml.workspace = true

# File system watching
notify.workspace = true

# WASM runtime (feature-gated)
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

[dev-dependencies]
rollball-core = { workspace = true }
rollball-gateway = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
async-trait = { workspace = true }
serde_json = { workspace = true }
mockito = { workspace = true }
