[package]
name = "rollball-grafeo"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Grafeo graph database engine (Phase 2 implementation)"

[dependencies]
rollball-core.workspace = true
rollball-memory.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
