[package]
name = "rollball-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Agent Runtime - unified execution engine for .agent packages"

[[bin]]
name = "rollball-runtime"
path = "src/main.rs"

[dependencies]
rollball-core.workspace = true
rollball-memory.workspace = true
rollball-grafeo.workspace = true
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
zip.workspace = true
toml.workspace = true
