[package]
name = "rollball-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Agent Runtime - unified execution engine for .agent packages"

[[bin]]
name = "rollball-runtime"
path = "src/main.rs"

[dependencies]
rollball-core.workspace = true
rollball-memory.workspace = true
rollball-grafeo.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
directories.workspace = true
parking_lot.workspace = true
regex.workspace = true
rusqlite.workspace = true
futures-core.workspace = true
futures-util = "0.3"
rand.workspace = true
sha2.workspace = true
zip.workspace = true
toml.workspace = true

[dev-dependencies]
rollball-core = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
async-trait = { workspace = true }
serde_json = { workspace = true }
