[package]
name = "rollball-desktop"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
anyhow = "1"
directories = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
